<resources>
    <string name="app_name">AppBanGiay</string>
    <string name="txt_register">Đăng Ký</string>
    <string name="txt_login">Đăng Nhập </string>
    <string name="txt_name"> Tên </string>
    <string name="txt_fullname"> Họ và Tên </string>
    <string name="txt_date">Ngày Sinh </string>
    <string name="txt_email">Email  </string>
    <string name="txt_phone">Phone  </string>
    <string name="txt_user"> Tên Đăng Nhập  </string>
    <string name="txt_password"> Mật khẩu  </string>
    <string name="txt_confirmpass"> Nhập lại mật khẩu </string>
    <string name="txt_gioitinh"> Giới Tính  </string>
    <string name="txt_nam"> Nam  </string>
    <string name="txt_nu"> Nữ  </string>
    <string name="btn_link_to_register"> Bạn chưa có tài khoản đăng kí ngay !!  </string>
    <string name="btn_login"> Login  </string>
    <string name="sign_up_button"> Đăng Ký  </string>
    <string name="have_account"> Có tài khoản , đăng nhập ngay  </string>
    <string name="open">Nav </string>
    <string name="close">Nav </string>
    <string name="nav_thongtin">Thông Tin khách hàng</string>
    <string name="nav_tinhtrang">Tình trạn đơn hàng</string>
    <string name="nav_giaynam">Giầy Nam</string>
    <string name="nav_giaynu">Giầy Nữ</string>
    <string name="nav_giaykid">Giầy trẻ em</string>
    <string name="nav_logout">Đăng Xuất</string>
    <string name="txt_shoename">Tên Giày</string>
    <string name="txt_shoedescription">Hãng</string>
    <string name="txt_shoesize">Size</string>
    <string name="txt_shoesoluong">Số Lượng</string>
    <string name="txt_shoeprice">Giá Giày</string>
    <string name="btn_choose">Chọn</string>
    <string name="btn_upload">Tải lên</string>
    <string name="txt_DSDH">Danh sách đơn hàng</string>
    <string name="txt_DSDHXN">Danh sách xác nhận(NV)</string>
    <string name="txt_DSHuy">Danh sách hủy(NV)</string>
    <string name="txt_DSQLNV">Quản lý nhân viên</string>
    <string name="txt_taoTKNV">Tạo tài khoản nhân viên</string>
    <string name="txt_DSDXN_QL">Danh sách đã xác nhận(QL)</string>
    <string name="txt_ID">ID:</string>
    <string name="txt_MaSP">Mã Sản Phẩm:</string>
    <string name="txt_TenSP">Tên Sản Phẩm:</string>
    <string name="txt_SoLuong">Số lượng:</string>
    <string name="txt_Size">Size:</string>
    <string name="txt_TongTien">Tổng Tiền:</string>
    <string name="txt_maDH">Mã đơn hàng:</string>
    <string name="txt_tenKH">Tên khách hàng:</string>
    <string name="txt_soDTKH">Số ĐT khách hàng:</string>
    <string name="txt_diaChiKH">Địa chỉ khách hàng:</string>
    <string name="txt_tinhTrang">Tình trạng:</string>
    <string name="txt_liDoHuy">Lí do hủy:</string>
    <string name="txt_hoTen">Họ và tên</string>
    <string name="txt_tenTK">Tên tài khoản</string>
    <string name="txt_gioiTinh">Giới tính</string>
    <string name="txt_chucVu">Chức vụ</string>
    <string name="txt_passWord">Password</string>
    <string name="name_page">Thanh toán</string>
    <string name="btn_dathan">Đặt hàng</string>
    <string name="btn_huy">Hủy</string>
    <string name="txt_tenkhachhang_thanhtoan">Tên khách hàng: </string>
    <string name="txt_sodienthoai_thanhtoan">Số điện thoại: </string>
    <string name="txt_diachigiao_thanhtoan">Địa chỉ giao: </string>
    <string name="txt_phivanchuyen_thanhtoan">Phí vận chuyển: </string>
    <string name="txt_chinhsua_thanhtoan">Chỉnh sửa </string>
    <string name="txt_tongtien_thanhtoan">Tổng tiền: </string>
    <string name="txt_tensanpham_thanhtoan">Tên sản phẩm: </string>
    <string name="txt_size_thanhtoan">Size: </string>
    <string name="txt_soluong_thanhtoan">Số lượng: </string>
    <string name="txt_gia_thanhtoan">Giá: </string>
    <string name="txt_Msp_thanhtoan">Mã sản Phẩm: </string>
    <string name="txt_Xoa_thanhtoan"> Xóa </string>
    <string name="txt_dsvanchuyen"> Danh sách vận chuyển </string>
    <string name="btn_xacnhan_dsvanchuyen"> Xác nhận </string>
    <string name="txt_Madonhang_dsvanchuyen"> Mã đơn hàng:</string>
    <string name="txt_soluong_dsvanchuyen"> số lượng:</string>
    <string name="txt_tensanpham__dsvanchuyen"> Tên sản phẩm:</string>
    <string name="txt_size_dsvanchuyen"> Size:</string>
    <string name="txt_mau_dsvanchuyen"> Màu:</string>
    <string name="txt_tinhtrang_dsvanchuyen"> Tình trạng:</string>
    <string name="txt_timkiem_dsvanchuyen"> Tìm kiếm </string>
    <string name="txt_Tongtien_dsvanchuyen"> Tổng tiền : </string>
    <string name="txt_tenkhachhang_dsvanchuyen"> Tên khách hàng:</string>
    <string name="txt_sodienthoai_dsvanchuyen"> Số điện thoại:</string>
    <string name="txt_diachikhachhang_dsvanchuyen"> Địa chỉ khách hàng:</string>
    <string name="btn_huy_dsvanchuyen"> Hủy </string>
    <string name="btn_refresh_dsvanchuyen"> Refresh </string>
    <string name="btn_thoat_dsvanchuyen"> Thoát </string>
    <string name="txt_danhsachdonhangdagiao"> Danh sách đơn hàng đã giao </string>
    <string name="txt_timkiem_dsdonhangdagiao"> Tìm kiếm :  </string>
    <string name="txt_Madonhang_dsdonhangdagiao"> Mã đơn hàng : </string>
    <string name="txt_tensanpham_dsdonhangdagiao"> Tên sản phẩm : </string>
    <string name="txt_tenkhachhang_dsdonhangdagiao"> Tên khách hàng : </string>
    <string name="txt_soluong_dsdonhangdagiao"> Số lượng : </string>
    <string name="txt_sodienthoaikhachhang_dsdonhangdagiao"> Số điện thoại khách hàng : </string>
    <string name="txt_diachi_dsdonhangdagiao"> Địa chỉ :  </string>
    <string name="txt_tongtien_dsdonhangdagiao"> Tổng tiền :  </string>
    <string name="txt_size_dsdonhangdagiao"> Size :  </string>
    <string name="btn_tinhtrang_dsdonhangdagiao"> Tình trạng :  </string>
    <string name="btn_lido_dsdonhangdagiao"> Lí do :  </string>
    <string name="btn_xacnhan_dsdonhangdagiao"> Xác nhận </string>
    <string name="btn_huy_dsdonhangdagiao"> Hủy </string>
    <string name="btn_refresh_dsdonhangdagiao"> Refresh</string>
    <string name="btn_trolai_dsdonhangdagiao"> Trở Lại</string>
    <string name="txt_danhsachnguoigiao_danhsachnguoigiao"> Danh sách người giao </string>
    <string name="txt_hoten_danhsachnguoigiao"> Họ tên :  </string>
    <string name="txt_sodienthoai_danhsachnguoigiao"> Số điện thoại :  </string>
    <string name="txt_tinhtrang_danhsachnguoigiao"> Tình trạng :  </string>
    <string name="btn_giao_danhsachnguoigiao"> Giao  </string>
    <string name="btn_huy_danhsachnguoigiao"> Hủy </string>
    <string name="btn_thoat_danhsachnguoigiao"> Thoát </string>
    <string name="btn_xacnhan_danhsachnguoigiao"> Xác nhận </string>
    <string name="btn_trolai_danhsachnguoigiao"> Trở lại </string>
    <string name="nav_taosanpham"> Tạo sản phẩm </string>
    <string name="nav_taonhanvien"> Tạo nhân viên </string>
    <string name="nav_logoutqly"> Đăng xuất </string>
    <string name="txt_timKiem">Tìm kiếm</string>
    <string name="btn_ThanhToan">Thanh Toán</string>
    <string name="btn_Thoat">Thoát</string>
    <string name="btn_OK">OK</string>
    <string name="btn_TroVe">Trở về</string>
    <string name="btn_XacNhan">Xác nhận</string>
    <string name="btn_Huy">Hủy</string>
    <string name="btn_chinhSua">Chỉnh sửa</string>
    <string name="btn_Tao">Tạo</string>
    <string name="btn_taoTK">Tạo tài khoản</string>
    <string name="edt_hoTen">nhập họ và tên</string>
    <string name="edt_tenTK">nhập tên tài khoản</string>
    <string name="edt_email">nhập email</string>
    <string name="edt_password">nhập mật khẩu</string>
    <string name="hint_lido">Nhập lí do hủy đơn hàng....</string>
    <string name="hint_chucvu">nhập chức vụ</string>
    <string name="txt_inhoadon_hoadon"> In hóa đơn </string>
    <string name="txt_madonhang_hoadon"> Mã dơn hàng : </string>
    <string name="txt_tensanpham_hoadon"> Tên sản phẩm :  </string>
    <string name="txt_mau_hoadon"> Màu :  </string>
    <string name="txt_size_hoadon"> Size :  </string>
    <string name="txt_tenkhachhang_hoadon"> Tên khách hàng :  </string>
    <string name="txt_sodienthoaikhachhang_hoadon"> Số điện thoại khách hàng :  </string>
    <string name="txt_diachi_hoadon"> địa chỉ :  </string>
    <string name="txt_tongtien_hoadon"> Tổng tiền :  </string>
    <string name="btn_giao_hoadon"> Giao </string>
    <string name="btn_thoat_hoadon"> Thoát </string>
    <string name="btn_huy_hoadon"> Hủy </string>
    <string name="txt_danhsachdonhangdagiao_quangly"> Danh sách đơn hàng đã giao </string>
    <string name="txt_timkiem_dsdonhangdagiaoqly"> Tìm kiếm :  </string>
    <string name="txt_Madonhang_dsdonhangdagiaoqly"> Mã đơn hàng :  </string>
    <string name="txt_tensanpham_dsdonhangdagiaoqly"> Tên sản phẩm :  </string>
    <string name="txt_tenkhachhang_dsdonhangdagiaoqly"> Tên khách hàng :  </string>
    <string name="txt_soluong_dsdonhangdagiaoqly"> Số lượng : </string>
    <string name="txt_size_dsdonhangdagiaoqly"> Size : </string>
    <string name="txt_sodienthoaikhachhang_dsdonhangdagiaoqly"> Số điện thoại khách hàng : </string>
    <string name="txt_diachi_dsdonhangdagiaoqly"> Địa chỉ :  </string>
    <string name="btn_tongtien_dsdonhangdagiaoqly"> Tổng tiền :  </string>
    <string name="btn_tinhtrang_dsdonhangdagiaoqly"> Tình trạng :  </string>
    <string name="btn_xacnhan_dsdonhangdagiaoqly"> Xác nhận </string>
    <string name="btn_huy_dsdonhangdagiaoqly"> Hủy </string>
    <string name="btn_trolai_dsdonhangdagiaoqly"> Trở lại</string>
    <string name="txt_danhsachdagiao_dsdonhangdagiaoqly"> Danh sách đã giao (quản lý) </string>
    <string name="txt_hoten_dsdonhangdagiaoqly"> Họ tên </string>
    <string name="txt_sodienthoai_dsdonhangdagiaoqly"> Số điện thoại </string>
    <string name="txt_tinhtrang_dsdonhangdagiaoqly"> Tình trạng </string>
    <string name="btn_giao_dsdonhangdagiaoqly"> Giao </string>
    <string name="btn_thoat_dsdonhangdagiaoqly"> Thoát </string>
    <string name="txt_danhsachdonhanghoanthanh_dsdonhanghoanthanhqly"> Danh sách đơn hàng hoàn thành </string>
    <string name="txt_madonhang_dsdonhanghoanthanhqly"> Mã đơn hàng :  </string>
    <string name="txt_tensanpham_dsdonhanghoanthanhqly"> Tên sản phẩm :  </string>
    <string name="txt_soluong_dsdonhanghoanthanhqly"> Số lượng :  </string>
    <string name="txt_size_dsdonhanghoanthanhqly"> Size :  </string>
    <string name="txt_tenkhachhang_dsdonhanghoanthanhqly"> Tên khách hàng :  </string>
    <string name="txt_sodienthoaikhachhang_dsdonhanghoanthanhqly"> Số điện thoại khách hàng :  </string>
    <string name="txt_diachikhachhang_dsdonhanghoanthanhqly"> Dịa chỉ khách hàng :  </string>
    <string name="txt_nguoigiao_dsdonhanghoanthanhqly"> Người giao :  </string>
    <string name="txt_sodienthoainguoigiao_dsdonhanghoanthanhqly"> Số điện thoại người giao :  </string>
    <string name="txt_tongtien_dsdonhanghoanthanhqly"> Tổng tiền :  </string>
    <string name="txt_tinhtrang_dsdonhanghoanthanhqly">Tình trạng : </string>
    <string name="btn_tongtien_dsdonhanghoanthanhqly">Tổng tiền : </string>
    <string name="btn_trolai_dsdonhanghoanthanhqly">Trở lại</string>
    <string name="btn_Thoat_dsdonhanghoanthanhqly">Thoát</string>
    <string name="btn_refresh_danhsachnguoigiao">Tro lai</string>
    <string name="rad_user">Người dùng</string>
    <string name="rad_nhanvien">Nhân Viên</string>
    <string name="rad_quanly">Quản lý</string>
    <string name="taonhanvienqly"> Tạo nhân viên </string>
    <string name="txt_Madonhang">Mã đơn hàng:</string>
    <string name="txt_Tongtien">Tổng tiền:</string>
    <string name="txt_Tensanpham">Tên sản phẩm:</string>
    <string name="txt_Soluong">Số lượng:</string>
    <string name="txt_Tenkhachhang">Tên khách hàng:</string>
    <string name="txt_SodienthoaiKH">Số điện thoại khách hàng:</string>
    <string name="txt_DiachiKH">Địa chỉ khách hàng:</string>
    <string name="txt_Tinhtrang">Tình trạng:</string>
    <string name="btn_Hoanthanh">Hoàn thành</string>
    <string name="txt_id">ID</string>
</resources>