<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:id="@+id/lnItem"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_id"
            android:textColor="@color/txt_Color"
            android:visibility="gone"></TextView>

        <TextView
            android:id="@+id/txt_Madonhang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Madonhang"
            android:textColor="@color/txt_Color"></TextView>

        <TextView
            android:id="@+id/txt_Tensanpham"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Tensanpham"
            android:textColor="@color/txt_Color"></TextView>

        <TextView
            android:id="@+id/txt_Soluong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Soluong"
            android:textColor="@color/txt_Color"></TextView>

        <TextView
            android:id="@+id/txt_Size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Size"
            android:textColor="@color/txt_Color"></TextView>

        <TextView
            android:id="@+id/txt_Tenkhachhang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Tenkhachhang"
            android:textColor="@color/txt_Color"></TextView>

        <TextView
            android:id="@+id/txt_Sodienthoai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sodienthoai_thanhtoan"
            android:textColor="@color/txt_black" />

        <TextView
            android:id="@+id/txt_Diachi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_DiachiKH"
            android:textColor="@color/txt_black" />

        <TextView
            android:id="@+id/txt_Tongtien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Tongtien"
            android:textColor="@color/txt_Color"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_Tinhtrang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_Color"
            android:text="@string/txt_Tinhtrang">
        </TextView>
    </LinearLayout>




</LinearLayout>