<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Manager.DanhSachTaoNhanVienActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_taoTKNV"
            android:id="@+id/txt_taoTKNV"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="@dimen/layout_margin_Top_10dp"
            android:layout_marginBottom="@dimen/layout_margin_Bottom_10dp"
            android:textColor="@color/txt_color">

        </TextView>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@color/background_listview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_hoTen"
                android:id="@+id/txt_HoTen">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vien"
                android:hint="@string/edt_hoTen"
                android:id="@+id/edt_fullName"
                android:layout_marginTop="@dimen/layout_margin_Top_5dp">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tenTK"
                android:id="@+id/txt_tentk"
                android:layout_marginTop="@dimen/layout_margin_Top_5dp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vien"
                android:hint="@string/edt_tenTK"
                android:id="@+id/edt_userName"
                android:layout_marginTop="@dimen/layout_margin_Top_5dp">

            </EditText>




            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_passWord"
            android:id="@+id/txt_passWord"
            android:layout_marginTop="@dimen/layout_margin_Top_5dp">
            </TextView>

            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/vien"
            android:inputType="textPassword"
            android:hint="@string/edt_password"
            android:id="@+id/edt_password"
            android:layout_marginTop="@dimen/layout_margin_Top_5dp">

            </EditText>
            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_Top_5dp"
                android:text="@string/txt_email"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vien"
                android:hint="@string/edt_email"
                android:id="@+id/edt_email"
                android:layout_marginTop="@dimen/layout_margin_Top_5dp">

            </EditText>

            <TextView
                android:id="@+id/txt_gioiTinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_Top_10dp"
                android:text="@string/txt_gioiTinh">

            </TextView>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_Top_10dp"
                android:entries="@array/spn_gioitinh"
                android:id="@+id/spn_gioiTinh">

            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hashpass">

            </TextView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/background">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Tao"
            android:text="@string/btn_Tao"
            android:layout_marginRight="@dimen/layout_margin_Right_70dp"
            android:textColor="@color/btn_txt_color"
            android:background="@drawable/vienbutton"
            android:onClick="btn_TAO">


        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Huy"
            android:textColor="@color/btn_txt_color"
            android:text="@string/btn_Huy"
            android:background="@drawable/vienbutton"
            >

        </Button>

    </LinearLayout>
</LinearLayout>