<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Manager.UploadImage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_20dp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="center"
            android:id="@+id/iv_shoeImage"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_shoename"
            android:textSize="@dimen/txt_Size"
            android:layout_marginTop="@dimen/layout_margin_Top_20dp"
            android:id="@+id/txt_shoe_name"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_shoedescription"
            android:textSize="@dimen/txt_Size"
            android:layout_marginTop="@dimen/layout_margin_Top_20dp"
            android:id="@+id/text_description"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_shoesize"
            android:textSize="@dimen/txt_Size"
            android:layout_marginTop="@dimen/layout_margin_Top_20dp"
            android:id="@+id/txt_shoe_size"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_shoesoluong"
            android:textSize="@dimen/txt_Size"
            android:layout_marginTop="@dimen/layout_margin_Top_20dp"
            android:id="@+id/txt_shoe_int"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_shoeprice"
            android:textSize="@dimen/txt_Size"
            android:layout_marginTop="@dimen/layout_margin_Top_20dp"
            android:id="@+id/text_price"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_choose"
            android:background="@drawable/sign_up_button"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_Size"
            android:onClick="btnSelectImage"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/sign_up_button"
            android:onClick="btn_uploadShoe"
            android:text="@string/btn_upload"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_Size" />
    </LinearLayout>

</ScrollView>