<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/sign_up_scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background"
    >

    <LinearLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="32dp">

        <EditText
            android:id="@+id/txt_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/sign_up_username"
            android:gravity="center"
            android:hint="@string/txt_fullname"
            android:textColor="@color/white"
            android:textColorHint="@color/white"

            />
        <EditText
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/sign_up_username"
            android:gravity="center"
            android:hint="@string/txt_user"
            android:textColor="@color/white"
            android:textColorHint="@color/white"

            />
        <EditText
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_email"
            android:gravity="center"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"


            />

        <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_up_password"
        android:gravity="center"
        android:hint="@string/txt_password"
        android:inputType="numberPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_gioitinh"
                android:textSize="@dimen/txt_Size"
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/radio_nam"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_Left_10dp"
                android:text="@string/txt_nam"
                android:textSize="@dimen/txt_Size"
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/radio_nu"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_Left_10dp"
                android:text="@string/txt_nu"
                android:textSize="@dimen/txt_Size"
                android:textColor="@color/white"/>

        </RadioGroup>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_button"
            android:gravity="center"
            android:text="@string/sign_up_button"
            android:onClick="onCLick"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</ScrollView>