<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtLiDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lido"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_xacNhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_XacNhan"/>
        <Button
            android:id="@+id/btn_Huy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Huy"/>
    </LinearLayout>
</LinearLayout>